Alignment issues have been addressed

--- a/css/common.css
+++ b/css/common.css
@@ -193,5 +193,5 @@ select.form-control {
 }
 
 .bootstrap-select {
-    margin-top: 10px;
+    margin-top: 0px;
 }
